Fixed some spacing issues on home-questions block

--- a/src/sass/components/_components.home-questions.scss
+++ b/src/sass/components/_components.home-questions.scss
@@ -9,15 +9,21 @@
         padding: $inuit-global-spacing-unit $inuit-global-spacing-unit-small;
         @media screen and (min-width: 768px) {
             width: 50%;
+            padding: 2*$inuit-global-spacing-unit $inuit-global-spacing-unit;
+        }
+         @media screen and (min-width: 1440px) {
+            display: flex;
+            justify-content: center;
+            padding: 3*$inuit-global-spacing-unit $inuit-global-spacing-unit-small;
         }
         &_bcg-dark {
             color: white;
             background: url("../img/questions-dark-bcg.png");
-            background-size: 60%;
+            background-size: 300px;
         }
         &_bcg-light {
             background: url("../img/questions-light-bcg.png");
-            background-size: 60%;
+            background-size: 300px;
         }
     }
 }
